Fix collapse

--- a/src/styles/elements/_collapse-section.scss
+++ b/src/styles/elements/_collapse-section.scss
@@ -64,11 +64,11 @@
         }
     }
 }
-@media (max-width: 992px) {
-    .collapse-section__body {
-        max-height: 0;
+// @media (max-width: 992px) {
+//     .collapse-section__body {
+//         max-height: 0;
  
-    }
-}
+//     }
+// }
 
 
